--- a/estilos.css
+++ b/estilos.css
@@ -856,31 +856,59 @@ footer {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 @media (max-width:700px) {
     .slider-box{
         width: 100%;
     }
 }
+
+
+
+/*  anuncios de emergencia*/
+
+ #popup {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.6);
+    z-index: 9999;
+  }
+
+  .popup-content {
+    background-color: white;
+    position: relative;
+    width: 500px;
+    height: 500px;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  }
+
+  .popup-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .close-btn {
+    position: absolute;
+    top: 8px;
+    right: 12px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    color: #fff;
+    background-color: rgba(0,0,0,0.5);
+    padding: 2px 8px;
+    border-radius: 50%;
+  }
+
+
+
+
+
