--- a/estilos.css
+++ b/estilos.css
@@ -205,34 +205,23 @@ body {
 
 /*segunda parte ----parte de paneles*/
 
-    
+ /* Estilos para el panel */
 .panel {
     position: relative;
     width: 100vw; /* Ancho completo de la ventana */
-    height: 120vh; /* Altura completa de la ventana */
+    height: 100vh; /* Altura completa de la ventana */
     overflow: hidden; /* Oculta cualquier desbordamiento de la imagen */
 }
+
+/* Imagen dentro del panel */
 .panel img {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Mantiene la proporción y cubre todo el contenedor */
+    object-fit: contain; /* Ajusta la imagen para que no se recorte, pero puede dejar espacios vacíos */
     z-index: -1; /* Envía la imagen al fondo */
-}
-.texto {
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(255, 255, 255, 0.6);
-    font-size: 36px;
-    font-weight: bold;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-    text-align: center;
-    z-index: 1; /* Asegura que el texto esté por encima de la imagen */
 }
 
 
