--- a/estilos.css
+++ b/estilos.css
@@ -966,10 +966,25 @@ footer {
     .UBICACION {
         height: 250px; /* Reducimos la altura del mapa */
     }
+
+
+
+.panel {
+    height: 50vh; /* Asegura que el panel ocupe toda la altura de la ventana */
+    width: 100%;   /* Asegura que el panel ocupe todo el ancho de la ventana */
+    position: relative;
+    overflow: hidden; /* Asegura que cualquier desbordamiento se oculte */
 }
 
+.panel img {
+    position: absolute; /* Asegura que la imagen esté en la parte superior del contenedor */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 120%;
+    object-fit: contain; /* Hace que toda la imagen esté visible, sin recortes */
+    object-position: center; /* Centra la imagen dentro del contenedor */
+}
 
-
-
-
-
+    
+}
