--- a/estilos.css
+++ b/estilos.css
@@ -153,7 +153,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ajusta la imagen contain  para que no se 
+    object-fit: contain; /* Ajusta la imagen contain  para que no se 
     recorte lo modifique a cover si falla lo corriges aqui cambiando cover por
     contain */
     z-index: -1; /* Envía la imagen al fondo */
