--- a/estilos.css
+++ b/estilos.css
@@ -873,7 +873,7 @@ footer {
     top: 0;
     left: 0;
     width: 100%;
-    height: 120%;
+    height: auto;
     object-fit: contain; /* Hace que toda la imagen esté visible, sin recortes */
     object-position: center; /* Centra la imagen dentro del contenedor */
 }
