--- a/estilos.css
+++ b/estilos.css
@@ -888,11 +888,12 @@ footer {
     
 }
 
-
-
 /* tema navideño */
 
-     #navidad-overlay {
+/* FONDO OSCURO */
+
+
+#navidad-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -905,38 +906,44 @@ footer {
   z-index: 9999;
 }
 
+/* CAJA DEL POPUP */
 #navidad-popup {
   background: white;
-  padding: 15px;
-  max-width: 90%;
-  border-radius: 12px;
-  position: relative;
-  box-shadow: 0 0 15px rgba(0,0,0,0.4);
+  padding: 20px;
+  width: 520px;          /* CAJA MÁS ANCHA */
+  max-width: 98%;
+  border-radius: 16px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.4);
   border: 3px solid #c62828;
   text-align: center;
 }
 
+/* IMAGEN MÁS GRANDE */
 #navidad-img {
-  width: 100%;
-  max-width: 350px;
+  width: 100%;           /* OCUPA TODO EL POPUP */
+  max-width: 100%;       /* SIN LÍMITE */
   height: auto;
-  border-radius: 10px;
+  border-radius: 14px;
 }
 
+/* BOTÓN CERRAR */
 #cerrar-navidad {
-  margin-top: 15px;
+  display: block;
+  margin: 18px auto 0;
   background: #c62828;
   color: white;
-  padding: 10px 18px;
+  padding: 12px 34px;
   border: none;
-  border-radius: 8px;
+  border-radius: 10px;
   cursor: pointer;
   font-weight: bold;
+  font-size: 16px;
 }
 
 #cerrar-navidad:hover {
   background: #b71c1c;
 }
+
 
 
 
@@ -962,6 +969,7 @@ footer {
         opacity: 0.4;
     }
 }
+
 
 
 
