--- a/estilos.css
+++ b/estilos.css
@@ -592,7 +592,7 @@ body {
 footer {
     height: auto;
     width: 100%;
-    background-color: #000000;
+    background-color: #1A1E1Dff;
     color: white;
     text-align: center;
 }
@@ -969,6 +969,7 @@ footer {
         opacity: 0.4;
     }
 }
+
 
 
 
